<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:id="@+id/linear"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_tobic_name"
        android:textStyle="bold"
        android:gravity="left|center"
        android:layout_gravity="center"
        android:id="@+id/tobicName"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/er"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/quistions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1_10"/>

    <TextView
        android:id="@+id/quistion"
        android:text="@string/quistion_is_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/op1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/answer_1"/>

    <Button
        android:id="@+id/op2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/answer_2"/>

    <Button
        android:id="@+id/op3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/answer_3"/>

    <Button
        android:id="@+id/op4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/answer_4"/>

    <Button
        android:id="@+id/ok"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:layout_marginTop="22dp"/>

</LinearLayout>