<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/linear"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:id="@+id/mainlay1"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="2.0"
            android:padding="20dp"
            android:layout_marginEnd="5dp"
            android:background="#918C8B"
            android:id="@+id/lay1">

            <ImageView
                android:layout_width="80dp"
                style="?android:attr/progressBarStyleLarge"
                android:layout_height="80dp"
                android:background="#BDBFF3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/java"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="2.0"
            android:padding="20dp"
            android:layout_marginEnd="5dp"
            android:background="#918C8B"
            android:layout_marginStart="5dp"
            android:id="@+id/lay2">

            <ImageView
                android:layout_width="80dp"
                style="?android:attr/progressBarStyleLarge"
                android:layout_height="80dp"
                android:background="#BDBFF3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/java_2"
                android:layout_marginTop="8dp"
                android:textSize="15sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:id="@+id/mainlay2"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="2.0"
            android:padding="20dp"
            android:layout_marginEnd="5dp"
            android:background="#918C8B"
            android:id="@+id/lay3">

            <ImageView
                android:layout_width="80dp"
                style="?android:attr/progressBarStyleLarge"
                android:layout_height="80dp"
                android:background="#BDBFF3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/java_3"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="2.0"
            android:padding="20dp"
            android:layout_marginEnd="5dp"
            android:background="#918C8B"
            android:layout_marginStart="5dp"
            android:id="@+id/lay4">

            <ImageView
                android:layout_width="80dp"
                style="?android:attr/progressBarStyleLarge"
                android:layout_height="80dp"
                android:background="#BDBFF3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/java_4"
                android:layout_marginTop="8dp"
                android:textSize="15sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textSize="25sp"
        android:background="@drawable/round"
        />
    <Button
        android:id="@+id/addQuestionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="addQuestionButton"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textSize="25sp"
        android:background="@drawable/round"
        />

</LinearLayout>